--- a/其他科目笔记/物理笔记.md
+++ b/其他科目笔记/物理笔记.md
@@ -6,26 +6,32 @@
 高中知识也够了
 * 补充：  
   质心：质心是由质点系质量分布决定的一个几何点：
-  $$r_c = \frac{\int rdm}{\int dm}$$
+  $$\displaystyle r_c = \frac{\int rdm}{\int dm}$$
 
 # 三、刚体力学
 * 1.转动惯量
   $$J = \int r^2 dm$$
 
   >特殊记忆:  
-  ①转轴过中心垂直于棒  $J=\frac{1}{12}ml^2$  
-  ②转轴过端点垂直于棒 $J=\frac{1}{3}ml^2$  
-  ③圆盘绕中心轴线 $J=\frac{1}{2}mR^2$  
-  ④薄圆环绕中心轴线 $J=mR^2$  
-  ⑤细圆环绕切线 $J=\frac{3}{2}mR^2$  
-  ⑥实球体绕直径 $J=\frac{2}{5}mR^2$  
-  ⑦薄球壳绕直径 $J=\frac{2}{3}mR^2$  
+  ①转轴过中心垂直于棒  $\displaystyle J=\frac{1}{12}ml^2$  
+  ${}$   
+  ②转轴过端点垂直于棒 $\displaystyle J=\frac{1}{3}ml^2$    
+  ${}$   
+  ③圆盘绕中心轴线 $\displaystyle J=\frac{1}{2}mR^2$  
+  ${}$   
+  ④薄圆环绕中心轴线 $\displaystyle J=mR^2$  
+  ${}$   
+  ⑤细圆环绕切线 $\displaystyle J=\frac{3}{2}mR^2$  
+  ${}$   
+  ⑥实球体绕直径 $\displaystyle J=\frac{2}{5}mR^2$  
+  ${}$   
+  ⑦薄球壳绕直径 $\displaystyle J=\frac{2}{3}mR^2$  
 
 * 2.平行轴定理与垂直轴定理
   $$J = J_c +md^2$$
 
-  >注意：方向决定了$md^2$的正负  
-  *我的理解是靠近质心是负（就是减去$md^2$），反之远离质心就是正（就是加上$md^2$）*
+  >注意：方向决定了 $md^2$ 的正负  
+  *我的理解是靠近质心是负（就是减去 $md^2$ ），反之远离质心就是正（就是加上 $md^2$ ）*
 
 
 * 3.角动量与力矩
@@ -48,7 +54,7 @@
   >非保守力：力所作的功与路径有关（例如摩擦力，爆炸力、安培力、细绳绷紧时绳子内力等）
 
 * 爱的魔力转圈圈  
-  转动定律：（$\alpha$是角加速度，就是 $\frac{\omega}{t}$ ）
+  转动定律：（ $\alpha$ 是角加速度，就是 $\displaystyle \frac{\omega}{t}$ ）
   $$M=J\alpha$$
 
   
@@ -70,4 +76,4 @@
 感觉高中知识不够用，求补充
 
 # 六、狭义相对论
-emmm，$E=mc^2$，就不太能写了，感觉只可意会不可言传。
+emmm， $E=mc^2$ ，就不太能写了，感觉只可意会不可言传。
