精简版可突击期末

--- a/其他科目笔记/物理笔记.md
+++ b/其他科目笔记/物理笔记.md
@@ -7,7 +7,23 @@
 * 补充：  
   质心：质心是由质点系质量分布决定的一个几何点：
   $$\displaystyle r_c = \frac{\int rdm}{\int dm}$$
-
+常见质心：
+### 半圆环 
+**质心位置**： 距离圆心的距离为
+$$\displaystyle y = \frac{2R}{\pi}$$   
+ **计算方式**： 设半圆环的半径为$R$，质量为$m$，其线密度$\displaystyle \lambda=\frac{m}{\pi R}$。 采用极坐标来计算质心坐标，对于半圆环$x = 0$（由于对称性）。 计算$y$坐标：$\displaystyle y_{cm}=\frac{\int ydm}{\int dm}$。在极坐标下，$\displaystyle dm = \lambda Rd\theta$，$\displaystyle y = R\sin\theta$，积分区间为$\theta = 0$到$\theta=\pi$。 则$\displaystyle \int dm=m$，$\displaystyle \int ydm=\int_{0}^{\pi}R\sin\theta\lambda Rd\theta=\lambda R^{2}\int_{0}^{\pi}\sin\theta d\theta$。 计算可得$\displaystyle \int_{0}^{\pi}\sin\theta d\theta = 2$，$\displaystyle \lambda=\frac{m}{\pi R}$，所以$\displaystyle \int ydm=\frac{2mR}{\pi}$。 从而$\displaystyle y_{cm}=\frac{2R}{\pi}$。 
+ ### 半圆盘 
+ **质心位置**： 距离圆心的距离为
+ $$\displaystyle y=\frac{4R}{3\pi}$$  
+  **计算方式**： 设半圆盘的半径为$R$，质量为$m$，其面密度$\displaystyle \sigma=\frac{2m}{\pi R^{2}}$。 同样$x = 0$（由对称性），计算$y$坐标$\displaystyle y_{cm}=\frac{\int ydm}{\int dm}$。 在极坐标下，$\displaystyle dm=\sigma rdr d\theta$，$\displaystyle y = r\sin\theta$，积分区域为$\displaystyle r = 0$到$r = R$，$\displaystyle \theta=0$到$\theta=\pi$。 $\displaystyle \int dm=m$，$\displaystyle \int ydm=\int_{0}^{\pi}\int_{0}^{R}r\sin\theta\sigma rdr d\theta=\sigma\int_{0}^{\pi}\sin\theta d\theta\int_{0}^{R}r^{2}dr$。 计算$\displaystyle \int_{0}^{\pi}\sin\theta d\theta = 2$，$\displaystyle \int_{0}^{R}r^{2}dr=\frac{R^{3}}{3}$，$\displaystyle \sigma=\frac{2m}{\pi R^{2}}$，可得$\displaystyle \int ydm=\frac{4mR}{3\pi}$，所以$\displaystyle y_{cm}=\frac{4R}{3\pi}$。 
+  ### 半球 
+  **质心位置**： 距离球心的距离为
+  $$\displaystyle z=\frac{3R}{8}$$ 
+  **计算方式**： 设半球的半径为$R$，质量为$m$，其体密度$\displaystyle \rho=\frac{3m}{2\pi R^{3}}$。 采用球坐标计算，$x = y = 0$（由对称性），计算$z$坐标$\displaystyle z_{cm}=\frac{\int zdm}{\int dm}$。 在球坐标下，$\displaystyle dm=\rho r^{2}\sin\theta drd\theta d\varphi$，$\displaystyle z = r\cos\theta$，积分区域为$\displaystyle r = 0$到$r = R$，$\theta = 0$到$\theta=\frac{\pi}{2}$，$\displaystyle \varphi = 0$到$\varphi = 2\pi$。 $\displaystyle \int dm=m$，$\displaystyle \int zdm=\int_{0}^{2\pi}\int_{0}^{\frac{\pi}{2}}\int_{0}^{R}r\cos\theta\rho r^{2}\sin\theta drd\theta d\varphi$。 计算可得$\displaystyle \int zdm=\frac{3mR}{8}$，所以$\displaystyle z_{cm}=\frac{3R}{8}$。 
+   ### 半球壳 
+   **质心位置**：距离球心的距离为
+   $$\displaystyle z=\frac{R}{2}$$
+   **计算方式**： 设半球壳的半径为$R$，质量为$m$，其面密度$\displaystyle \sigma=\frac{m}{2\pi R^{2}}$。 同样采用球坐标，$x = y = 0$（由对称性），计算$z$坐标$\displaystyle z_{cm}=\frac{\int zdm}{\int dm}$。 在球坐标下，$dm=\sigma R^{2}\sin\theta d\theta d\varphi$，$z = R\cos\theta$，积分区域为$\displaystyle \theta = 0$到$\displaystyle \theta=\frac{\pi}{2}$，$\displaystyle \varphi = 0$到$\displaystyle \varphi = 2\pi$。 $\displaystyle \int dm=m$，$\displaystyle \int zdm=\int_{0}^{2\pi}\int_{0}^{\frac{\pi}{2}}R\cos\theta\sigma R^{2}\sin\theta d\theta d\varphi$。 计算可得$\displaystyle \int zdm=\frac{mR}{2}$，所以$\displaystyle z_{cm}=\frac{R}{2}$。
 # 三、刚体力学
 * 1.转动惯量
   $$J = \int r^2 dm$$
@@ -21,7 +37,7 @@
   ${}$   
   ④薄圆环绕中心轴线 $\displaystyle J=mR^2$  
   ${}$   
-  ⑤细圆环绕切线 $\displaystyle J=\frac{3}{2}mR^2$  
+  ⑤细圆环绕切线 $\displaystyle J=\frac{3}{2}mR^2$（少见，比较难）  
   ${}$   
   ⑥实球体绕直径 $\displaystyle J=\frac{2}{5}mR^2$  
   ${}$   
@@ -31,7 +47,7 @@
   $$J = J_c +md^2$$
 
   >注意：方向决定了 $md^2$ 的正负  
-  *我的理解是靠近质心是负（就是减去 $md^2$ ），反之远离质心就是正（就是加上 $md^2$ ）*
+  ***我的理解是靠近质心是负（就是减去 $md^2$ ），反之远离质心就是正（就是加上 $md^2$ ）***
 
 
 * 3.角动量与力矩
@@ -46,6 +62,8 @@
       
   力矩:
   $$M = r \times F$$
+
+
 
 * 4.角动量守恒定律
   >守恒就完事了
@@ -63,14 +81,24 @@
 * >保守力做正功等于相应势能的减少；    
    保守力做负功等于相应势能的增加。
 * 高中各种能量
-
-
+* **转动中的动能**
+$$\displaystyle E_{k}=\frac{1}{2}I\omega^{2}$$
+其中$I$是刚体的转动惯量，$\omega$是刚体转动的角速度。
 * 流体
   $$S_1v_1=S_2v_2$$
   >($S$为截面积$v$为流速)  
   $$p+\frac{1}{2}\rho v^2+\rho gh=Q$$
   >($p$为压力，$\rho$为密度)
 
+
+
+## 总结一下
+| |质点的直线运动（刚体的平动） | 刚体的定轴转动 |
+| --- | --- | --- | 
+| 基本量 | 力F，质量m<br>牛顿第二定律 $F = ma$ | 力矩M，转动惯量J<br>转动定律 $M = J\alpha$ | 
+| 动量相关 | 动量 $p = mv$，冲量 $dI = Fdt$<br>动量定理 $Fdt = dp = d(mv)$ | 角动量 $L = J\omega$，冲量矩 $Md\mathrm{t}$<br>角动量定理 $Md\mathrm{t} = dL = d(J\omega)$ |
+| 守恒定律 | 动量守恒定律：$\sum mv =$ 常量<br>守恒条件：合外力为零 | 角动量守恒定律：$\sum J\omega =$ 常量<br>守恒条件：合外力矩为零 | 
+| 动能与功 | 平动动能 $\displaystyle \frac{mv^2}{2}$<br>力的功 $dA = Fdr$<br>动能定理 $\displaystyle \int Fdr = \frac{1}{2}mv^2 - \frac{1}{2}mv_0^2$ | 转动动能 $\displaystyle \frac{J\omega^2}{2}$<br>力矩的功 $dA = Md\theta$<br>动能定理 $\displaystyle \int Md\theta = \frac{1}{2}J\omega^2 - \frac{1}{2}J\omega_0^2$ |
 
 # 五、振动和波动
 感觉高中知识不够用，求补充
