--- a/数学分析/数学分析 上册.md
+++ b/数学分析/数学分析 上册.md
@@ -1,13 +1,15 @@
 **Copyright © 2024 Simon**
+
 # 第一章 序章
 
 * 暂无
 
 
 # 第二章 函数
+
 * 反函数
 
-## 三角函数和他的反函数  
+## 三角函数和反函数
 
 **倒数关系：**
 $$ \cos\theta \cdot \sec\theta = 1 $$
@@ -105,15 +107,20 @@ $$ 1 + \cot^{2}\theta = \csc^{2}\theta $$
      - 同样有$$\lim_{x \to 0}\frac{\tan x}{x}=1$$
    - **$1 - \cos x$与$\frac{1}{2}x^{2}$是高阶等价无穷小**：
      - 由$$\lim_{x \to 0}\frac{1 - \cos x}{\frac{1}{2}x^{2}} = 1$$
-2. **当$x\to+\infty$时**
+ - 补充：
+ - $$x-\sin x\sim\frac{1}{6}x^{3}$$
+
+1. **当$x\to+\infty$时**
    - **$\ln x$与$\sqrt{x}$的关系**：
      - 对于任意正整数$n$，$$\lim_{x \to +\infty}\frac{\ln x}{x^{n}} = 0$$
    - **$x^{n}$与$e^{x}$（$n$为常数）**：
      - 对于任意常数$n$，$$\lim_{x \to +\infty}\frac{x^{n}}{e^{x}} = 0$$
-
+* 当$x\to0$时
+$$\arctan{x}\to\sin{x}\to x\to \arcsin{x}\to \tan{x} \ \ \ \ \ \  {他们相差}\ \  \frac{x^3}{6}$$
+***重点：！！！！！（如果考试要用的话就要用泰勒展开写出来）***
 ## 函数连续性
 暂无
-## 无限小量和无线大量
+## 无限小量和无限大量
 暂无
 # 第四章 微分和微商
 ## 各种函数的导数
@@ -188,7 +195,8 @@ $v^{(k)}=e^{x}$ for all $k\geqslant0$
    - 若函数$y = f(x)$满足：
      - 在闭区间$[a,b]$上连续；
      - 在开区间$(a,b)$内可导。
-   - 那么在$(a,b)$内至少存在一点$\xi$，使得$f(b)-f(a)=f^{\prime}(\xi)(b - a)$。
+   - 那么在$(a,b)$内至少存在一点$\xi$，使得
+   - $$f(b)-f(a)=f^{\prime}(\xi)(b - a)$$
 
 >**应用举例**  
    例如，证明不等式$\displaystyle \frac{b - a}{1 + b^{2}}<\arctan b-\arctan a<\frac{b - a}{1 + a^{2}}$，其中$a < b$。  
@@ -252,8 +260,6 @@ $$\int \tan xdx = -\ln |\cos x|+c$$
 $$\int \cot xdx = \ln |\sin x|+c$$
 $$\int \csc xdx = \ln |\csc x - \cot x|+c$$
 $$\int \sec xdx = \ln |\sec x + \tan x|+c$$
-
-$$\int \frac{1}{x^{2}}dx = -\frac{1}{x}+c$$
 $$\int x^{2}dx = \frac{1}{3}x^{3}+c$$
 $$\int \frac{1}{x^{2}}dx = -\frac{1}{x}+c$$
 
@@ -270,7 +276,24 @@ $$\int \frac{dx}{\sqrt{x^{2}+a^{2}}}=\ln|x+\sqrt{x^{2}+a^{2}}|+c$$
 $$\int \frac{dx}{\sqrt{x^{2}-a^{2}}}=\ln|x+\sqrt{x^{2}-a^{2}}|+c$$
 $$\int \frac{x^{2}}{1 + x^{2}}dx=\frac{1}{2}\ln(1 + x^{2})+c$$
 $$\int \frac{1}{1 + x^{2}}dx=\arctan x + c$$
-## 换元积分
+
+
+### 补充
+
+$$\int \frac{x^2}{1 + x^{2}}dx = x - \arctan x + C$$
+过程如下（懂了吧）
+
+>$$
+\begin{align*}
+\frac{x^2}{1 + x^{2}}&=\frac{x^2 + 1 - 1}{1 + x^{2}}\\
+&=\frac{x^2 + 1}{1 + x^{2}} - \frac{1}{1 + x^{2}}\\
+&= 1 - \frac{1}{1 + x^{2}}
+\end{align*}$$
+$$\int\ln xdx=x\ln x - x + C
+$$
+
+
+##  换元积分
 1. **第一类换元法（凑微分法）**
 
    - **示例**：计算$\displaystyle \int 2x\cos(x^{2})dx$。
@@ -291,7 +314,8 @@ $$\int \frac{1}{1 + x^{2}}dx=\arctan x + c$$
      - 当被积函数中含有$\displaystyle \sqrt{a^{2}-x^{2}}(a>0)$时，可令$x = a\sin t$，$t\displaystyle \in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$。
        - 示例：计算$\displaystyle \int\frac{1}{\sqrt{1 - x^{2}}}dx$。
          - 令$x=\sin t$，$\displaystyle t\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$，则$dx=\cos tdt$。
-         - 原积分$$\displaystyle \int\frac{1}{\sqrt{1 - x^{2}}}dx=\int\frac{1}{\sqrt{1-\sin^{2}t}}\cos tdt=\int 1dt=t + C$$
+         - 原积分
+         - $$\displaystyle \int\frac{1}{\sqrt{1 - x^{2}}}dx=\int\frac{1}{\sqrt{1-\sin^{2}t}}\cos tdt=\int 1dt=t + C$$
          - 因为$\displaystyle x = \sin t$，所以$t=\arcsin x$，最终结果为$\arcsin x + C$  
      - 当被积函数中含有$\displaystyle \sqrt{x^{2}+a^{2}}(a>0)$时，可令$x = a\tan t$，$\displaystyle t\in\left(-\frac{\pi}{2},\frac{\pi}{2}\right)$。
      - 当被积函数中含有$\displaystyle \sqrt{x^{2}-a^{2}}(a>0)$时，可令$x = a\sec t$，$\displaystyle t\in\left(0,\frac{\pi}{2}\right)\cup\left(\frac{\pi}{2},\pi\right)$。
@@ -300,7 +324,8 @@ $$\int \frac{1}{1 + x^{2}}dx=\arctan x + c$$
      - 示例：计算$\displaystyle \int\frac{1}{x^{4}(1 + x^{2})}dx$。
        - 令$\displaystyle x=\frac{1}{t}$，则$\displaystyle dx=-\frac{1}{t^{2}}dt$。
        - 原积分
-       $$\displaystyle \int\frac{1}{x^{4}(1 + x^{2})}dx=\int\frac{t^{4}}{1 + t^{2}}\left(-\frac{1}{t^{2}}\right)dt=-\int\frac{t^{2}}{1 + t^{2}}dt$$
+       $$\displaystyle \int\frac{1}{x^{4}(1 + x^{2})}dx=\int\frac{t^{4}}{1 + t^{2}}\left(-\frac{1}{t^{2}}\right)dt=-\int\frac{t^{2}}{1 + t^{2}}dt
+       $$
        - 进一步化简$$\displaystyle =-\int\left(1-\frac{1}{1 + t^{2}}\right)dt=-t+\arctan t + C$$
        - 再把$\displaystyle t=\frac{1}{x}$代回，得到$\displaystyle -\frac{1}{x}+\arctan\frac{1}{x}+C$。
 3. **三角代换与双曲代换（补充方法）**
@@ -316,9 +341,9 @@ $$\int \frac{1}{1 + x^{2}}dx=\arctan x + c$$
 
 **分部积分公式**
    - 设函数$u = u(x)$及$v = v(x)$具有连续导数，那么
-   $$\int u(x)v^{\prime}(x)dx = u(x)v(x)-\int v(x)u^{\prime}(x)dx$$
-   也可以写成
-   $$\int udv = uv-\int vdu$$
+      $$\int u(x)v^{\prime}(x)dx = u(x)v(x)-\int v(x)u^{\prime}(x)dx$$
+      也可以写成
+      $$\int udv = uv-\int vdu$$
 
 ## 有理函数的积分
 就是拆开
@@ -359,13 +384,13 @@ $$e^x = 1 + x +\frac{x^2}{2!}+\frac{x^3}{3!}+\cdots+\frac{x^n}{n!}+\cdots$$
 
 
 ### 对数函数
-$$\ln(1 + x)=x-\frac{x^2}{2}+\frac{x^3}{3}-\cdots+(-1)^{k - 1}\frac{x^k}{k}+\cdots$$
+$$\ln(1 + x)=x-\frac{x^2}{2}+\frac{x^3}{3}-\cdots+(-1)^{n - 1}\frac{x^n}{n}+\cdots$$
 
 ### 三角函数
 - **正弦函数**：
-$$\sin x = x -\frac{x^3}{3!}+\frac{x^5}{5!}-\cdots+(-1)^{k - 1}\frac{x^{2k - 1}}{(2k - 1)!}+\cdots$$
+$$\sin x = x -\frac{x^3}{3!}+\frac{x^5}{5!}-\cdots+(-1)^{n - 1}\frac{x^{2n - 1}}{(2n - 1)!}+\cdots$$
 - **余弦函数**：
-$$\cos x = 1 -\frac{x^2}{2!}+\frac{x^4}{4!}-\cdots+(-1)^{k}\frac{x^{2k}}{(2k)!}+\cdots$$
+$$\cos x = 1 -\frac{x^2}{2!}+\frac{x^4}{4!}-\cdots+(-1)^{n}\frac{x^{2n}}{(2n)!}+\cdots$$
 - **正切函数**：
 $$\tan x = x +\frac{x^3}{3}+\frac{2x^5}{15}+\cdots$$
 
@@ -404,19 +429,51 @@ $$s=\int_{\alpha}^{\beta}\sqrt{[x'(t)]^{2}+[y'(t)]^{2}}dt$$
 
 #### （3）极坐标形式
 若曲线的极坐标方程为$\rho = \rho(\theta)$，$\alpha\leq\theta\leq\beta$，且$\rho(\theta)$在区间$[\alpha,\beta]$上具有连续导数，则曲线弧长$s$的计算公式为：
-$$s=\int_{\alpha}^{\beta}\sqrt{\rho^{2}(\theta)+[\rho'(\theta)]^{2}}d\theta$$
-
+$$s=\int_{\alpha}^{\beta}\sqrt{\rho^{2}(\theta)+[\rho'(\theta)]^{2}}d\theta
+$$
 ## 曲率
 
 **直角坐标系的曲率**
-   $$k=\left|\frac{y^{\prime\prime}}{\left[1+(y^{\prime})^{2}\right]^{\frac{3}{2}}}\right|$$
-   
+   $$k=\left|\frac{y^{\prime\prime}}{\left[1+(y^{\prime})^{2}\right]^{\frac{3}{2}}}\right|
+$$
+
 **参数方程的曲率**
    - 若曲线由参数方程$\left\{\begin{array}{l}x = x(t)\\y = y(t)\end{array}\right.$给出，$t$为参数。则$x^{\prime}=x^{\prime}(t)$，$y^{\prime}=y^{\prime}(t)$，$x^{\prime\prime}=x^{\prime\prime}(t)$，$y^{\prime\prime}=y^{\prime\prime}(t)$。
    - 曲率公式为
-   $$k = \left|\frac{x^{\prime}(t)y^{\prime\prime}(t)-x^{\prime\prime}(t)y^{\prime}(t)}{\left[(x^{\prime}(t))^{2}+(y^{\prime}(t))^{2}\right]^{\frac{3}{2}}}\right|$$
+      $$k = \left|\frac{x^{\prime}(t)y^{\prime\prime}(t)-x^{\prime\prime}(t)y^{\prime}(t)}{\left[(x^{\prime}(t))^{2}+(y^{\prime}(t))^{2}\right]^{\frac{3}{2}}}\right|
+$$
+
+## 面积
+1. **直角坐标下求面积**
+     - 设函数$y = f(x)$在区间$[a,b]$上连续且$f(x)\geqslant0$，那么由曲线$y = f(x)$，直线$x = a$，$x = b$以及$x$轴所围成的曲边梯形的面积
+     $$A=\int_{a}^{b}f(x)dx$$
+  
+2. **极坐标下求面积**
+   - 由极坐标方程$\rho=\rho(\theta)$，$\alpha\leqslant\theta\leqslant\beta$所围成的图形的面积$$S=\frac{1}{2}\int_{\alpha}^{\beta}\rho^{2}(\theta)d\theta$$
+   
+3. **参数方程下求面积**
+   - 若曲线$C$的参数方程为$\left\{\begin{array}{l}x = x(t)\\y = y(t)\end{array}\right.$，$\alpha\leqslant t\leqslant\beta$，且$x(t)$，$y(t)$具有连续的一阶导数，$x^{\prime}(t)$不变号。
+   - 当$x^{\prime}(t)>0$时，曲线$C$与直线$x = a,x = b,y = 0$所围成的图形的面积
+   $$A=\int_{\alpha}^{\beta}y(t)x^{\prime}(t)dt$$
 
 
-## 侧面积
-暂无
 
+### **直角坐标与极坐标的转换关系**
+   - 直角坐标用$(x,y)$表示，极坐标用$(\rho,\theta)$表示，它们之间的转换公式为$x = \rho\cos\theta$，$y=\rho\sin\theta$，且$\rho^{2}=x^{2} + y^{2}$
+
+
+
+# 一些例题
+* 求极限
+$$\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{i=1}^n \frac{\ln (1+1 / i)}{\sin 1 / i}
+$$
+
+* 解答：
+
+$$
+\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{i=1}^n \frac{\ln (1+1 / i)}{\sin 1 / i}=\lim _{n \rightarrow \infty} \frac{\ln (1+1 / n)}{\sin 1 / n}=\lim _{x \rightarrow 0} \frac{\ln (1+x)}{\sin x}=1
+$$
+
+
+# 黎曼和
+当分割子区间的最大长度$\lambda \to 0$（$n\to+\infty$且分割越来越细）时，黎曼和的极限若存在，就是函数$f(x)$在区间$[a,b]$上的定积分，即$$\int_{a}^{b}f(x)dx=\lim\limits_{\lambda\to0}\sum_{i = 1}^{n}f(\xi_{i})\Delta x_{i}$$
