--- a/程序设计笔记/C语言笔记001.md
+++ b/程序设计笔记/C语言笔记001.md
@@ -1,6 +1,12 @@
 **Copyright © 2024 Simon**
 # 链表常用代码
-
+* 定义
+```c
+struct node {
+    int data;
+    struct node* next;
+};
+```
 * 打印列表
 ```c
 void printList(node* head){
@@ -54,3 +60,471 @@ void bubbleSort(int arr[], int n) {
     }
 }
 ```
+
+
+## **第一部分：C++ 类与面向对象基础**
+
+1.  **类 (Class)**
+    * 用户自定义的数据类型，是对象的蓝图。
+    * 用于封装数据（成员变量）和操作数据的方法（成员函数）。
+    * 包含访问修饰符：`public`, `private`, `protected`。
+
+    ```cpp
+    // 类定义的示例
+    class Dog {
+    public: // 公有成员：可以在类的外部访问
+        std::string name;
+
+        // 构造函数 (见下方)
+        Dog(std::string n, int a);
+
+        // 成员函数 (见下方)
+        void bark();
+
+    private: // 私有成员：只能在类的内部访问
+        int age;
+
+    protected: // 保护成员 (见下方)
+        std::string breed;
+    };
+    ```
+
+2.  **成员函数 (Member Functions)**
+    * 在类内部定义的函数，用于操作类的成员变量或执行相关任务。
+    * 可以访问类的所有成员。
+    * 可在类内或类外定义（类外定义需用 `::` 作用域解析符）。
+
+    ```cpp
+    // 在类内部定义成员函数 (常用于短小的函数，编译器可能自动 inline)
+    class Example {
+    public:
+        void printValue(int val) { // 类内部定义
+            std::cout << "Value is: " << val << std::endl;
+        }
+    };
+
+    // 在类外部定义成员函数 (推荐用于较长的函数体)
+    class AnotherExample {
+    public:
+        void processData();
+    };
+
+    void AnotherExample::processData() { // 使用 :: 作用域解析符在类外定义
+        // 函数实现细节
+        std::cout << "Processing data..." << std::endl;
+    }
+    ```
+
+3.  **访问修饰符 (Access Specifiers)**
+    * `public`: 成员在任何地方都可访问。
+    * `private`: 成员只能在定义它们的类的内部访问。
+    * `protected`: 成员可以在定义它们的类的内部和其派生类的内部访问，但不能通过类的对象在外部直接访问。用于继承。
+
+    ```cpp
+    #include <iostream>
+    #include <string>
+
+    class Base {
+    public:
+        int public_mem;
+    private:
+        int private_mem; // Base内部可访问
+    protected:
+        int protected_mem; // Base内部和派生类内部可访问
+
+    public:
+        Base(int p, int pr, int pro) : public_mem(p), private_mem(pr), protected_mem(pro) {}
+        int get_private() { return private_mem; } // 通过成员函数访问 private
+    };
+
+    class Derived : public Base {
+    public:
+        Derived(int p, int pr, int pro) : Base(p, pr, pro) {}
+
+        void access_members() {
+            std::cout << "在 Derived 内部访问:" << std::endl;
+            std::cout << "  public_mem: " << public_mem << std::endl; // 可以访问 public
+            // std::cout << "  private_mem: " << private_mem << std::endl; // 错误: 不能直接访问 private
+            std::cout << "  protected_mem: " << protected_mem << std::endl; // 可以访问 protected
+        }
+    };
+	```
+
+4.  **构造函数 (Constructor)**
+    * 特殊成员函数，与类同名，无返回类型，创建对象时自动调用。
+
+    ```cpp
+    class Box {
+        double length;
+        double width;
+        double height;
+
+    public:
+        // 默认构造函数
+        Box() : length(0.0), width(0.0), height(0.0) {
+            std::cout << "调用默认构造函数" << std::endl;
+        }
+
+        // 带参数的构造函数
+        Box(double l, double w, double h) : length(l), width(w), height(h) { // 使用初始化列表
+            std::cout << "调用带参数的构造函数" << std::endl;
+        }
+
+        // ... 其他成员函数
+        double getVolume() const { return length * width * height; }
+    };
+
+    ```
+
+5.  **析构函数 (Destructor)**
+    * 特殊成员函数，`~` 加类名，无返回类型，无参数。
+    * 对象生命周期结束时自动调用，用于清理资源。
+
+    ```cpp
+    class Resource {
+        int* data;
+    public:
+        Resource(int size) {
+            data = new int[size]; // 分配资源
+            std::cout << "Resource Created, data allocated." << std::endl;
+        }
+
+        // 析构函数
+        ~Resource() {
+            delete[] data; // 释放资源
+            std::cout << "Resource Destroyed, data deallocated." << std::endl;
+        }
+        // ...
+    };
+
+    ```
+
+6.  **拷贝构造函数 (Copy Constructor)**
+    * 用于通过一个现有对象创建并初始化一个同类的新对象。
+    * 签名：`ClassName(const ClassName& other);`
+
+    ```cpp
+    class MyData {
+        int* ptr;
+        int size;
+    public:
+        MyData(int s) : size(s) {
+            ptr = new int[size]; // 分配内存
+            std::cout << "MyData(" << size << ") created, memory allocated." << std::endl;
+            // 初始化数据...
+            for(int i=0; i<size; ++i) ptr[i] = i;
+        }
+
+        // 析构函数 (释放内存)
+        ~MyData() {
+            delete[] ptr;
+            std::cout << "MyData destroyed, memory deallocated." << std::endl;
+        }
+
+        // 默认拷贝构造函数 (如果没写，编译器会自动生成一个执行浅拷贝)
+        // MyData(const MyData& other) = default; // 显式使用默认的浅拷贝
+
+        // ... 其他成员
+        void display() const {
+            std::cout << "Data: [";
+            for(int i=0; i<size; ++i) std::cout << ptr[i] << (i == size - 1 ? "" : " ");
+            std::cout << "]" << std::endl;
+        }
+    };
+
+    ```
+
+7.  **深拷贝 (Deep Copy) vs. 浅拷贝 (Shallow Copy)**
+    * **浅拷贝 (Shallow Copy):** 只复制指针值。多个对象共享内存，可能导致问题。
+    * **深拷贝 (Deep Copy):** 为指针成员分配新内存，并复制数据。每个对象独立。需要自定义拷贝构造函数和赋值运算符。
+
+    ```cpp
+    // 接着上面的 MyData 类，我们现在自定义深拷贝构造函数
+    class MyData_DeepCopy {
+        int* ptr;
+        int size;
+    public:
+        MyData_DeepCopy(int s) : size(s) {
+            ptr = new int[size]; // 分配内存
+            std::cout << "MyData_DeepCopy(" << size << ") created, memory allocated." << std::endl;
+            for(int i=0; i<size; ++i) ptr[i] = i;
+        }
+
+        ~MyData_DeepCopy() {
+            delete[] ptr;
+            std::cout << "MyData_DeepCopy destroyed, memory deallocated." << std::endl;
+        }
+
+        // *** 深拷贝构造函数 ***
+        MyData_DeepCopy(const MyData_DeepCopy& other) : size(other.size) {
+            ptr = new int[size]; // *** 为新对象分配新的内存 ***
+            std::cout << "MyData_DeepCopy(Copy) created, NEW memory allocated." << std::endl;
+            // *** 复制数据 ***
+            for(int i=0; i<size; ++i) {
+                ptr[i] = other.ptr[i];
+            }
+        }
+
+        // *** 还需要自定义赋值运算符来实现深拷贝赋值，否则赋值仍是浅拷贝！***
+        // MyData_DeepCopy& operator=(const MyData_DeepCopy& other) { ... }
+
+        void display() const {
+            std::cout << "Data: [";
+            for(int i=0; i<size; ++i) std::cout << ptr[i] << (i == size - 1 ? "" : " ");
+            std::cout << "]" << std::endl;
+        }
+    };
+
+    ```
+
+8.  **运算符重载 (Operator Overloading)**
+    * 为类对象定义运算符行为。
+
+    ```cpp
+    class Point {
+        int x, y;
+    public:
+        Point(int x = 0, int y = 0) : x(x), y(y) {}
+
+        // *** 重载 + 运算符 (作为成员函数) ***
+        Point operator+(const Point& other) const {
+            // 返回一个新的 Point 对象，其 x 和 y 是两个 Point 的 x 和 y 之和
+            return Point(this->x + other.x, this->y + other.y);
+        }
+
+        // *** 重载 << 运算符 (通常作为友元函数，以便访问私有成员并允许 cout 在左侧) ***
+        // 友元声明通常放在类定义内部
+        friend std::ostream& operator<<(std::ostream& os, const Point& p);
+    };
+
+    // *** 在类外部定义友元函数 ***
+    std::ostream& operator<<(std::ostream& os, const Point& p) {
+        os << "Point(" << p.x << ", " << p.y << ")";
+        return os; // 返回 ostream 引用以支持链式输出 (cout << p1 << p2;)
+    }
+
+    ```
+
+
+
+## **第二部分：常用 C++ 标准库头文件及函数**
+
+C++ 标准库提供了大量有用的工具，分布在不同的头文件中。掌握它们能极大地提高开发效率。
+
+1. **`<iostream>` (输入/输出流)**
+    
+    - **用途：** 控制台的输入输出。
+    - **主要对象/功能：** `std::cin`, `std::cout`, `std::cerr`, `std::clog`, `<<` (输出), `>>` (输入), `std::endl` (换行并刷新)。
+    
+    C++
+    
+    ```
+    #include <iostream>
+    
+    int main() {
+        int num;
+        std::cout << "请输入一个整数: ";
+        std::cin >> num;
+        std::cout << "你输入的整数是: " << num << std::endl;
+        std::cerr << "这是一条错误消息" << std::endl; // 错误输出流
+        return 0;
+    }
+    ```
+    
+2. **`<string>` (字符串类)**
+    
+    - **用途：** 方便安全的字符串处理。
+    - **主要功能：** `std::string` 类，支持创建、拼接、长度、访问、查找、子串等。
+    - **字符串与数字转换 (C++11+ 推荐):** `std::to_string`, `std::stoi`, `std::stod` 等。
+    
+    C++
+    
+    ```
+    #include <iostream>
+    #include <string> // 需要包含
+    
+    int main() {
+        std::string greeting = "Hello";
+        std::string subject = "C++";
+        std::string message = greeting + ", " + subject + "!"; // 字符串拼接
+    
+        std::cout << message << std::endl; // 输出: Hello, C++!
+        std::cout << "长度: " << message.length() << std::endl; // 输出: 长度: 14
+        std::cout << "第一个字符: " << message[0] << std::endl; // 输出: 第一个字符: H
+    
+        std::string part = message.substr(7, 3); // 提取子串，从索引7开始取3个字符
+        std::cout << "子串: " << part << std::endl; // 输出: 子串: C++
+    
+        // 数字转字符串
+        int number = 123;
+        std::string s_number = std::to_string(number);
+        std::cout << "数字转字符串: " << s_number + "45" << std::endl; // 输出: 数字转字符串: 12345
+    
+        // 字符串转数字
+        std::string s_int = "456";
+        int i = std::stoi(s_int);
+        std::cout << "字符串转数字: " << i + 10 << std::endl; // 输出: 字符串转数字: 466
+    
+        return 0;
+    }
+    ```
+    
+3. **`<vector>` (动态数组)**
+    
+    - **用途：** 可变大小的数组，比 C 风格数组灵活且功能多。
+    - **主要功能：** `std::vector` 类，支持动态增删元素、随机访问、迭代器。
+    
+    C++
+    
+    ```
+    #include <iostream>
+    #include <vector> // 需要包含
+    
+    int main() {
+        std::vector<int> numbers; // 创建一个空 vector
+    
+        numbers.push_back(10); // 在末尾添加元素
+        numbers.push_back(20);
+        numbers.push_back(30);
+    
+        std::cout << "Vector 元素:";
+        // 遍历 vector (使用范围-based for loop)
+        for (int n : numbers) {
+            std::cout << " " << n;
+        }
+        std::cout << std::endl; // 输出: Vector 元素: 10 20 30
+    
+        std::cout << "大小: " << numbers.size() << std::endl; // 输出: 大小: 3
+        std::cout << "第一个元素: " << numbers[0] << std::endl; // 输出: 第一个元素: 10
+    
+        numbers.pop_back(); // 移除末尾元素
+        std::cout << "移除后大小: " << numbers.size() << std::endl; // 输出: 移除后大小: 2
+    
+        return 0;
+    }
+    ```
+    
+4. **`<cmath>` (数学函数)**
+    
+    - **用途：** 提供常用的数学计算函数（通常处理浮点数）。
+    - **主要函数：** `std::sqrt`, `std::pow`, `std::sin`, `std::cos`, `std::log`, `std::fabs` 等。
+    
+    C++
+    
+    ```
+    #include <iostream>
+    #include <cmath> // 需要包含
+    
+    int main() {
+        double value = 9.0;
+        double root = std::sqrt(value); // 平方根
+        std::cout << value << " 的平方根是: " << root << std::endl; // 输出: 9 的平方根是: 3
+    
+        double base = 2.0;
+        double exp = 3.0;
+        double result = std::pow(base, exp); // 幂运算 2^3
+        std::cout << base << " 的 " << exp << " 次方是: " << result << std::endl; // 输出: 2 的 3 次方是: 8
+    
+        double angle = 1.0; // 1 弧度
+        std::cout << "sin(" << angle << ") = " << std::sin(angle) << std::endl;
+    
+        return 0;
+    }
+    ```
+    
+5. **`<iomanip>` (I/O 操纵符)**
+    
+    - **用途：** 格式化输入输出流，控制显示宽度、精度、对齐等。
+    - **主要操纵符：** `std::setw`, `std::setprecision`, `std::fixed`, `std::scientific`, `std::left`, `std::right`。
+    
+    C++
+    
+    ```
+    #include <iostream>
+    #include <iomanip> // 需要包含
+    #include <cmath>   // 用于 std::M_PI (或其他圆周率定义)
+    
+    int main() {
+        double pi = 3.141592653589793;
+    
+        std::cout << "默认: " << pi << std::endl; // 默认输出
+    
+        std::cout << "setprecision(5) (总有效数字): " << std::setprecision(5) << pi << std::endl; // 输出: 3.1416
+    
+        // 结合 fixed，setprecision 控制小数点后位数
+        std::cout << "fixed 和 setprecision(5) (小数点后): "
+                  << std::fixed << std::setprecision(5) << pi << std::endl; // 输出: 3.14159
+    
+        // 设置字段宽度并填充
+        std::cout << "setw(15) 并 setfill('*'): "
+                  << std::setfill('*') << std::setw(15) // 设置宽度和填充字符
+                  << std::fixed << std::setprecision(2) // 继续使用 fixed 和 小数点后2位
+                  << 123.456 << std::endl; // 输出: *********123.46
+    
+        // 注意：fixed 和 setprecision 会影响后续浮点数输出，直到被取消或重新设置。
+        // 可以使用 std::cout.unsetf() 或 std::resetiosflags() 取消格式标志。
+    
+        return 0;
+    }
+    ```
+    
+6. **`<algorithm>` (算法库)**
+    
+    - **用途：** 提供大量通用算法，作用于容器的元素范围。
+    - **主要功能：** 排序 (`std::sort`), 查找 (`std::find`), 复制 (`std::copy`), 集合操作等。
+    - **重要前提：** 大多数集合算法（交、并、差）要求输入范围是**已排序**的。
+    
+    C++
+    
+    ```
+    #include <iostream>
+    #include <vector>
+    #include <algorithm> // 包含 sort 和 find
+    #include <iterator>  // 包含 std::back_inserter (用于集合算法)
+    #include <numeric>   // 包含 std::accumulate (求和，与算法库常一起用)
+    
+    int main() {
+        std::vector<int> data = {5, 2, 8, 1, 9, 4};
+    
+        // 排序
+        std::sort(data.begin(), data.end());
+        std::cout << "排序后: ";
+        for (int x : data) std::cout << x << " "; // 输出: 1 2 4 5 8 9
+        std::cout << std::endl;
+    
+        // 查找元素
+        auto it = std::find(data.begin(), data.end(), 8);
+        if (it != data.end()) {
+            std::cout << "找到元素 8" << std::endl; // 输出: 找到元素 8
+        }
+    
+        // *** 集合算法示例 (需要输入已排序) ***
+        std::vector<int> set1 = {1, 4, 5, 7, 10}; // 假设已排序
+        std::vector<int> set2 = {4, 6, 7, 8, 10}; // 假设已排序
+    
+        std::vector<int> intersection_result;
+        std::vector<int> union_result;
+        std::vector<int> difference_result; // set1 - set2
+    
+        // 求交集
+        std::set_intersection(set1.begin(), set1.end(),
+                              set2.begin(), set2.end(),
+                              std::back_inserter(intersection_result));
+        std::cout << "交集: "; for (int x : intersection_result) std::cout << x << " "; std::cout << std::endl; // 输出: 4 7 10
+    
+        // 求并集
+        std::set_union(set1.begin(), set1.end(),
+                       set2.begin(), set2.end(),
+                       std::back_inserter(union_result));
+        std::cout << "并集: "; for (int x : union_result) std::cout << x << " "; std::cout << std::endl; // 输出: 1 4 5 6 7 8 10
+    
+        // 求差集 (set1 - set2)
+        std::set_difference(set1.begin(), set1.end(),
+                            set2.begin(), set2.end(),
+                            std::back_inserter(difference_result));
+        std::cout << "差集 (set1-set2): "; for (int x : difference_result) std::cout << x << " "; std::cout << std::endl; // 输出: 1 5
+    
+        return 0;
+    }
+    ```
+    
